--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
   "name": "project_task",
-  "app_id": "",
+  "app_id": "362d0b4",
   "type": "ionic-angular",
   "integrations": {
     "cordova": {}
